--- a/extension/templates/extension/Pantalla.html
+++ b/extension/templates/extension/Pantalla.html
@@ -19,50 +19,7 @@
 <body class="fondoPP">
 {% endblock fondo %} 
 
-{% block Pantalla %}
-<a class="navbar-brand" href="{% url 'Pantalla' Panta.idUsuario %}"  style="margin-left: 25px;" >Inicio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-{% endblock Pantalla %}
 
-{% block nintendo %}
-<li class="nav-item active">
-    <a class="nav-link disabled  cuN1" href="{% url 'Nintendo' Panta.idUsuario %}">Nintendo</a>
-</li>
-{% endblock nintendo %}
-
-{% block Xbox %}
-<li class="nav-item active">
-    <a class="nav-link disabled  cuN1" href="{% url 'xbox' Panta.idUsuario %}">Xbox</a>
-</li>
-{% endblock Xbox %}
-
-{% block Play %}
-<li class="nav-item active">
-    <a class="nav-link disabled  cuN1" href="{% url 'Play' Panta.idUsuario %}">PlayStation</a>
-</li>
-{% endblock Play %}
-
-{% block PC %}
-<li class="nav-item active">
-    <a class="nav-link disabled  cuN1" href="{% url 'Pc' Panta.idUsuario %}">PC</a>
-</li>
-{% endblock PC %}
-
-{% block Contacto %}
-<li class="nav-item active">
-    <a class="nav-link disabled  cuN1" href="{% url 'Contacto' Panta.idUsuario %}">Contactanos</a>
-</li>
-{% endblock Contacto %}
-
-{% block verperfil %}
-<a class="dropdown-item " href="{% url 'VerPerfil' Panta.idUsuario %}">Ver perfil</a>
-{% endblock verperfil %}
-
-{% block Modificarperfil %}
-<a class="dropdown-item " href="{% url 'ModificarP' Panta.idUsuario %}">Modificar Perfil</a>
-{% endblock Modificarperfil %}
      
 {% block cuerpo %}
 <div class="container">
@@ -83,86 +40,86 @@
             <h1 style="margin-top: -17px;padding-top: 20px;background-color: rgba(235, 235, 235, 0.817);text-align: center;">Destacados de cada plataforma</h1><br>
             <br><br>
             {% if user.is_authenticated %} 
-                <a class="cuN1" href="{% url 'Nintendo' Panta.idUsuario %}"  >
+                <a class="cuN1" href=""  >
                     <p class="page-description" style="font-size: x-large;background-color: rgba(253, 2, 2, 0.815);color: rgb(0, 0, 0);text-align: center;">NINTENDO</p>
                 </a>
             {% else %}                 
-                <a class="cuN1" href="{% url 'Nintendo' 0 %}"  >
+                <a class="cuN1" href=""  >
                     <p class="page-description" style="font-size: x-large;background-color: rgba(253, 2, 2, 0.815);color: rgb(0, 0, 0);text-align: center;">NINTENDO</p>
                 </a>
             {% endif %} 
 
             <div class="row">
                 <div class="col-md-6 col-sm-6 centrar">
-                    <a class="cuN1 img" href="{% url 'Animal' VideoH.id_videojuego %}" >
-                    <img src="{{VideoH.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoH.nombreV }}</p></a>
+                    <a class="cuN1 img" href="" >
+                    <img src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                 </div>
                 <div class="col-md-6 col-sm-6 centrar">
-                    <a class="cuN1 img" href="{% url 'Animal' VideoG.id_videojuego %}" >
-                    <img src="{{VideoG.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoG.nombreV }}</p></a>
+                    <a class="cuN1 img" href="" >
+                    <img src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                 </div>
             </div>
                 <br><br>
                 {% if user.is_authenticated %} 
-                    <a class="cuX1" href="{% url 'xbox' Panta.idUsuario %}" >
+                    <a class="cuX1" href="" >
                         <p class="page-description" style="font-size: x-large;background-color: rgba(0, 95, 51, 0.815);color: rgb(0, 0, 0);text-align: center;">XBOX</p>
                     </a>
                 {% else %}                 
-                    <a class="cuX1" href="{% url 'xbox' 0 %}" >
+                    <a class="cuX1" href="" >
                         <p class="page-description" style="font-size: x-large;background-color: rgba(0, 95, 51, 0.815);color: rgb(0, 0, 0);text-align: center;">XBOX</p>
                     </a>
                 {% endif %} 
                 
                     <div class="row">
                         <div class="col-md-6 col-sm-6 centrar">
-                            <a class="cuX1" href="{% url 'DeadR' VideoJ.id_videojuego %}" >
-                            <img  src="{{VideoJ.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoJ.nombreV }}</p></a>
+                            <a class="cuX1" href="" >
+                            <img  src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                         </div>
                         <div class="col-md-6 col-sm-6 centrar">
-                            <a class="cuX1" href="{% url 'DeadR' VideoT.id_videojuego %}" >
-                            <img   src="{{VideoT.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoT.nombreV }}</p></a>
+                            <a class="cuX1" href="" >
+                            <img   src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                         </div> 
                     </div>
                     <br><br>
                     {% if user.is_authenticated %} 
-                        <a class="cuPC1" href="{% url 'Pc' Panta.idUsuario %}" >
+                        <a class="cuPC1" href="" >
                             <p class="page-description" style="font-size: x-large;background-color: rgba(131, 24, 180, 0.719);color: rgb(0, 0, 0);text-align: center;">PC</p>
                         </a>
                     {% else %}                 
-                        <a class="cuPC1" href="{% url 'Pc' 0 %}" >
+                        <a class="cuPC1" href="" >
                             <p class="page-description" style="font-size: x-large;background-color: rgba(131, 24, 180, 0.719);color: rgb(0, 0, 0);text-align: center;">PC</p>
                         </a>
                     {% endif %} 
                 
                     <div class="row">
                         <div class="col-md-6 col-sm-6 centrar">
-                            <a class="cuPC1" href="{% url 'BMesa' VideoM.id_videojuego %}" >
-                            <img src="{{VideoM.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoM.nombreV }}</p></a>
+                            <a class="cuPC1" href="" >
+                            <img src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                         </div>
                         <div class="col-md-6 col-sm-6 centrar">
-                            <a class="cuPC1" href="{% url 'BMesa' VideoN.id_videojuego %}" >
-                            <img src="{{VideoN.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoN.nombreV }}</p></a>
+                            <a class="cuPC1" href="" >
+                            <img src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                         </div>
                     </div>
                     <br><br>
                     {% if user.is_authenticated %} 
-                        <a class="cuP1" href="{% url 'Play' Panta.idUsuario %}" >
+                        <a class="cuP1" href="" >
                             <p class="page-description" style="font-size: x-large;background-color: rgba(10, 42, 148, 0.815);color: rgb(0, 0, 0);text-align: center;">PLAYSTATION</p>
                         </a>
                     {% else %}                 
-                        <a class="cuP1" href="{% url 'Play' 0 %}" >
+                        <a class="cuP1" href="" >
                             <p class="page-description" style="font-size: x-large;background-color: rgba(10, 42, 148, 0.815);color: rgb(0, 0, 0);text-align: center;">PLAYSTATION</p>
                         </a>
                     {% endif %} 
                         
                     <div class="row">
                         <div class="col-md-6 col-sm-6 centrar">
-                            <a class="cuP1" href="{% url 'Batman' VideoP.id_videojuego %}" >
-                            <img src="{{VideoP.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoP.nombreV }}</p></a>
+                            <a class="cuP1" href="" >
+                            <img src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                         </div>
                         <div class="col-md-6 col-sm-6 centrar">
-                            <a class="cuP1" href="{% url 'Batman' VideoL.id_videojuego %}" >
-                            <img src="{{VideoL.foto.url}}"  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX">{{ VideoL.nombreV }}</p></a>
+                            <a class="cuP1" href="" >
+                            <img src=""  alt="sin imagen" class="img"><br><p style="color:rgb(0, 0, 0);background-color: rgba(255, 255, 255, 0.872);" class="letraX"></p></a>
                         </div>   
                     </div><br>
 
