--- a/extension/templates/extension/Registrarse.html
+++ b/extension/templates/extension/Registrarse.html
@@ -29,7 +29,6 @@
                 
                 <form action="{% url 'formAgregarU' %}" method="POST" id="formregister" name="formregister" class="fondoform" enctype="multipart/form-data">
                   {% csrf_token %}
-                  <a href="{% url 'Pantalla' %}" ><p style="text-align: left;"><img src="{% static 'extension/img/Perfiles/patraFormal.png' %}" alt="no foto" style="width:55px;height:55px;"></p>
                     <h1 class="centrar letraLo" >Registro Alumno</h1><br>
                     <div class="form"></div>
 
@@ -100,6 +99,7 @@
                      
                     </div>
                     <br><a class="cu1 , centrar" href="{% url 'RegistrarseP' %}"><p style="text-align: center;">Eres profesor registrate como el..</p></a>
+                    <a class="cu1 , centrar" href="{% url 'Pantalla' %}"><p style="text-align: center;">Volver a lobby</p></a>
                     <p class="warnings" id="mensaje_register"></p>
                     <p class="warnings " id="mensaje"></p>
                     {% if messages %}
